--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Hangman Video Game Edition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
-    <script src="main.js"></script>
 </head>
 <body>
-    
+    <script src="/js/main.js"></script>
 </body>
 </html>
