--- a/index.html
+++ b/index.html
@@ -2,12 +2,27 @@
 <html lang="en-us">
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+    
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hangman Video Game Edition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
 </head>
+
 <body>
+    <header>
+
+    </header>
+    
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
