--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#" class="brand-logo active">Hangman Video Game Edition</a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+            <li><a href="#">Nintendo</a></li>
+            <li><a href="#">Sega</a></li>
+            <li><a href="#">Valve</a></li>
+            </ul>
+        </div>
+    </nav>
     
     <main>
 
