--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
 
     </main>
 
-    <footer>
-
+    <footer class="page-footer">
+        <div class="footer-copyright">
+            <div class="container">
+            © 2018 Code Ugly
+            <a class="grey-text text-lighten-4 right" href="http://www.aaronkennethwalker.com" target="_blank">Portfolio</a>
+            </div>
+        </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <script src="/js/main.js"></script>
