added pagination, slight cleanup, add icons code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hangman Video Game Edition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#" class="brand-logo active">Hangman Video Game Edition</a>
+            <a href="#" class="brand-logo">Hangman Video Game Edition</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#">Nintendo</a></li>
             <li><a href="#">Sega</a></li>
@@ -23,7 +23,15 @@
     </nav>
     
     <main>
-
+        <ul class="pagination">
+            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li class="waves-effect"><a href="#">2</a></li>
+            <li class="waves-effect"><a href="#">3</a></li>
+            <li class="waves-effect"><a href="#">4</a></li>
+            <li class="waves-effect"><a href="#">5</a></li>
+            <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
+        </ul>
     </main>
 
     <footer class="page-footer">
