--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Hangman Video Game Edition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="images/controller_favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 
