--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="footer-copyright">
             <div class="container">
             © 2018 Code Ugly
-            <a class="grey-text text-lighten-4 right" href="http://www.aaronkennethwalker.com" target="_blank">Portfolio</a>
+            <a class="grey-text text-lighten-4 right" href="http://www.aaronkennethwalker.com" target="_blank">Aaron's Portfolio</a>
             </div>
         </div>
     </footer>
