added alphabet list

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper container">
             <a href="#" class="brand-logo">Hangman Video Game Edition</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="#">Nintendo</a></li>
@@ -24,18 +24,50 @@
     </nav>
     
     <main>
-        <ul id="pagination" class="pagination hidden">
-            <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-            <li class="active"><a href="#">1</a></li>
-            <li class="waves-effect"><a href="#">2</a></li>
-            <li class="waves-effect"><a href="#">3</a></li>
-            <li class="waves-effect"><a href="#">4</a></li>
-            <li class="waves-effect"><a href="#">5</a></li>
-            <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
-        </ul>
+        <div id="letterList">
+            <ul class="center">
+                <li class="unpicked">A</li>
+                <li class="unpicked">B</li>
+                <li class="unpicked">C</li>
+                <li class="unpicked">D</li>
+                <li class="unpicked">E</li>
+                <li class="unpicked">F</li>
+                <li class="unpicked">G</li>
+                <li class="unpicked">H</li>
+                <li class="unpicked">I</li>
+                <li class="unpicked">J</li>
+                <li class="unpicked">K</li>
+                <li class="unpicked">L</li>
+                <li class="unpicked">M</li>
+                <li class="unpicked">N</li>
+                <li class="unpicked">O</li>
+                <li class="unpicked">P</li>
+                <li class="unpicked">Q</li>
+                <li class="unpicked">R</li>
+                <li class="unpicked">S</li>
+                <li class="unpicked">T</li>
+                <li class="unpicked">U</li>
+                <li class="unpicked">V</li>
+                <li class="unpicked">W</li>
+                <li class="unpicked">X</li>
+                <li class="unpicked">Y</li>
+                <li class="unpicked">Z</li>
+            </ul>
+        </div>
     </main>
 
     <footer class="page-footer">
+        <div class="container">
+            <ul id="pagination" class="pagination center hidden">
+                <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                <li class="active"><a href="#">1</a></li>
+                <li class="waves-effect"><a href="#">2</a></li>
+                <li class="waves-effect"><a href="#">3</a></li>
+                <li class="waves-effect"><a href="#">4</a></li>
+                <li class="waves-effect"><a href="#">5</a></li>
+                <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
+            </ul>
+        </div>
         <div class="footer-copyright">
             <div class="container">
             © 2018 Code Ugly
