--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     
     <main>
-        <div id="letterList">
+        <div id="letterList" class="hidden">
             <ul class="center">
                 <li class="unpicked">A</li>
                 <li class="unpicked">B</li>
